# akeneo-mcp

./: .env.example  .gitignore  Dockerfile  NOTICE  README.md  akenea-openapi.yaml  docker-compose.yml  pyproject.toml
src/akeneo_mcp/: akeneo.py  config.py  main.py  server.py
